big changes idk

--- a/locations/index.html
+++ b/locations/index.html
@@ -7,17 +7,18 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 			integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="/default.css"/>
-		<link rel="icon" href="/media/soda-barn-icon.png"/>
+		<link rel="icon" href="/media/soda-barn-teal.png"/>
 		<title>Locations | The Soda Barn - Soda Pop and Cookies</title>
 	</head>
 	<body>
 
-    <div class="soda-barn-title">
-      <img src="/media/soda-barn-icon-border.png" height="150px" title="The Soda Barn" alt="The Soda Barn Logo"/>
+    <div class="soda-barn-header">
+      <img src="/media/soda-barn-logo-white.png" height="150px" title="The Soda Barn" alt="The Soda Barn Logo"/>
+      <div class="header-divider"></div>
     </div>
 
 
-		<nav class="navbar navbar-expand-sm navbar-light">
+		<nav class="navbar navbar-expand-sm navbar-dark">
 			<!--<a class="navbar-brand" href="/"><img src="/media/soda-barn-icon.png" width="75em"></a>-->
 			<div class="navbar-centerer">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,6 +42,10 @@
 		
     <div class="page-centerer">
       <div class="page-content">
+
+				<h1>LOCATIONS</h1>
+				<br><br>
+
         <hr>
         <h2>Chubbuck</h2>
         <p><a href="https://www.google.com/maps/place/The+Soda+Barn/@42.9201757,-112.4602805,17z/data=!3m1!5s0x53554678196f9bdf:0x188c2d43b71536e5!4m8!1m2!3m1!2sThe+Soda+Barn!3m4!1s0x535545d7e204294f:0x178554b13e715fa5!8m2!3d42.9201434!4d-112.4580927">435 E Chubbuck Rd, Chubbuck, ID 83202</a></p>
@@ -66,13 +71,13 @@
       <div class="footer-item">All images © The Soda Barn</div>
       <div class="footer-item">
         <a href="https://github.com/baileehodge/thesodabarn" target="_blank">
-          <img src="/media/github-icon.png" width="25px" title="GitHub Repository"/>
+          <img src="/media/icons/github.png" width="25px" title="GitHub Repository"/>
         </a>
         <a href="https://www.facebook.com/mysodabarn" target="_blank">
-          <img src="/media/facebook-icon.png" width="25px" title="Facebook Page"/>
+          <img src="/media/icons/facebook.png" width="25px" title="Facebook Page"/>
         </a>
         <a href="https://www.instagram.com/the.soda.barn/" target="_blank">
-          <img src="/media/instagram-icon.png" width="25px" title="Instagram Page"/>
+          <img src="/media/icons/instagram.png" width="25px" title="Instagram Page"/>
         </a>
       </div>
 		</div>
