--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 			integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="/default.css"/>
-		<link rel="icon" href="/media/soda-barn-icon.png"/>
+		<link rel="icon" href="/media/soda-barn-logo-teal.png"/>
 		<title>The Soda Barn - Soda Pop and Cookies</title>
 	</head>
 	<body>
 
-    <div class="soda-barn-title">
-      <img src="/media/soda-barn-icon-square.png" height="150px" title="The Soda Barn" alt="The Soda Barn Logo"/>
+    <div class="soda-barn-header">
+      <img src="/media/soda-barn-logo-white.png" height="150px" title="The Soda Barn" alt="The Soda Barn Logo"/>
+      <div class="header-divider"></div>
     </div>
 
-
-		<nav class="navbar navbar-expand-sm navbar-light">
-			<!--<a class="navbar-brand" href="/"><img src="/media/soda-barn-icon.png" width="75em"></a>-->
+		<nav class="navbar navbar-expand-sm navbar-dark">
+			<!-- <a class="navbar-brand" href="/"><img src="/media/soda-barn-icon-white.png" width="75em"></a> -->
 			<div class="navbar-centerer">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -38,11 +38,11 @@
         </div>
       </div>
 		</nav>
-		
+
+
     <div class="page-centerer">
       <div class="page-content">
-
-
+        <h1 class = "heading">Welcome to the Soda Barn!</h1>
 
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -52,13 +52,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/media/slideshow1-drinks.jpg" alt="Drinks">
+              <img class="d-block w-100" src="/media/slideshow/drinks.jpg" alt="Drinks">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/media/slideshow2-cookie-dough.jpg" alt="Cookie dough">
+              <img class="d-block w-100" src="/media/slideshow/cookie-dough.jpg" alt="Cookie dough">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="/media/slideshow3-cookies.jpg" alt="Cookies">
+              <img class="d-block w-100" src="/media/slideshow/cookies.jpg" alt="Cookies">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -70,9 +70,20 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-        
+
+				<div class = "hours">
+					<h1>HOURS</h1>
+					<br>
+					<p>Monday through Thursday: 7:30 AM - 10:00 PM</p>
+					<p>(Lobby closes at 9:00)</p>
+					<br>
+					<p>Friday & Saturday: 7:30 AM - 11:00 PM</p>
+					<p>(Lobby closes at 10:00)</p>
+        </div>
       </div>
     </div>
+
+
 		
 		<div class="footer">
       <div class="footer-item github-repo" style="width: 25px"></div>
@@ -83,13 +94,13 @@
       <div class="footer-item">All images © The Soda Barn</div>
       <div class="footer-item">
         <a href="https://github.com/baileehodge/thesodabarn" target="_blank">
-          <img src="/media/github-icon.png" width="25px" title="GitHub Repository"/>
+          <img src="/media/icons/github.png" width="25px" title="GitHub Repository"/>
         </a>
         <a href="https://www.facebook.com/mysodabarn" target="_blank">
-          <img src="/media/facebook-icon.png" width="25px" title="Facebook Page"/>
+          <img src="/media/icons/facebook.png" width="25px" title="Facebook Page"/>
         </a>
         <a href="https://www.instagram.com/the.soda.barn/" target="_blank">
-          <img src="/media/instagram-icon.png" width="25px" title="Instagram Page"/>
+          <img src="/media/icons/instagram.png" width="25px" title="Instagram Page"/>
         </a>
       </div>
 		</div>
