--- a/menu/index.html
+++ b/menu/index.html
@@ -7,17 +7,18 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 			integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="/default.css"/>
-		<link rel="icon" href="/media/soda-barn-icon.png"/>
+		<link rel="icon" href="/media/soda-barn-teal.png"/>
 		<title>Menu | The Soda Barn - Soda Pop and Cookies</title>
 	</head>
 	<body>
 
-    <div class="soda-barn-title">
-      <img src="/media/soda-barn-icon-border.png" height="150px" title="The Soda Barn" alt="The Soda Barn Logo"/>
+    <div class="soda-barn-header">
+      <img src="/media/soda-barn-logo-white.png" height="150px" title="The Soda Barn" alt="The Soda Barn Logo"/>
+      <div class="header-divider"></div>
     </div>
 
 
-		<nav class="navbar navbar-expand-sm navbar-light">
+		<nav class="navbar navbar-expand-sm navbar-dark">
 			<!--<a class="navbar-brand" href="/"><img src="/media/soda-barn-icon.png" width="75em"></a>-->
 			<div class="navbar-centerer">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,9 +42,14 @@
 		
     <div class="page-centerer">
       <div class="page-content">
-        <img src="/media/menu1.jpg" width="100%"/>
-        <img src="/media/menu2.jpg" width="100%"/>
-        <img src="/media/menu3.jpg" width="100%"/>
+				<h1 class = "heading">MENU</h1>
+
+				
+        <img src="/media/menus/menu1.jpg" width="100%"/>
+				<hr class = "menu-hr">
+        <img src="/media/menus/menu2.jpg" width="100%"/>
+				<hr class = "menu-hr">
+        <img src="/media/menus/menu3.jpg" width="100%"/>
       </div>
     </div>
 		
@@ -56,13 +62,13 @@
       <div class="footer-item">All images © The Soda Barn</div>
       <div class="footer-item">
         <a href="https://github.com/baileehodge/thesodabarn" target="_blank">
-          <img src="/media/github-icon.png" width="25px" title="GitHub Repository"/>
+          <img src="/media/icons/github.png" width="25px" title="GitHub Repository"/>
         </a>
         <a href="https://www.facebook.com/mysodabarn" target="_blank">
-          <img src="/media/facebook-icon.png" width="25px" title="Facebook Page"/>
+          <img src="/media/icons/facebook.png" width="25px" title="Facebook Page"/>
         </a>
         <a href="https://www.instagram.com/the.soda.barn/" target="_blank">
-          <img src="/media/instagram-icon.png" width="25px" title="Instagram Page"/>
+          <img src="/media/icons/instagram.png" width="25px" title="Instagram Page"/>
         </a>
       </div>
 		</div>
