- improved navbar and title - fixed squished footer problem - redid locations page - cleaned up css

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 	</head>
 	<body>
 
-    <div class="soda-barn-header">
+    <!-- <div class="soda-barn-header">
       <img src="/media/soda-barn-logo-white.png" height="150px" title="The Soda Barn" alt="The Soda Barn Logo"/>
       <div class="header-divider"></div>
-    </div>
+    </div> -->
 
 		<nav class="navbar navbar-expand-sm navbar-dark">
-			<!-- <a class="navbar-brand" href="/"><img src="/media/soda-barn-icon-white.png" width="75em"></a> -->
+			<!-- <a class="navbar-brand" href="/"><img src="/media/soda-barn-logo-white.png" width="75em"></a> -->
 			<div class="navbar-centerer">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- gave navbar-toggler the nav-item class so it gets sized the same as the nav-items -->
+        <button class="navbar-toggler nav-item" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -31,8 +32,14 @@
             <li class="nav-item">
                 <a class="nav-link" href="/menu">Menu</a>
             </li>
+            <li class="middle-logo">
+              <a href="/"><img src="/media/soda-barn-logo-white.png" title="The Soda Barn" alt="The Soda Barn Logo"></a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="/locations">Locations</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -42,8 +49,8 @@
 
     <div class="page-centerer">
       <div class="page-content">
-        <h1 class = "heading">Welcome to the Soda Barn!</h1>
-
+        <h1>Welcome to the Soda Barn!</h1>
+        <br>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -70,16 +77,6 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-
-				<div class = "hours">
-					<h1>HOURS</h1>
-					<br>
-					<p>Monday through Thursday: 7:30 AM - 10:00 PM</p>
-					<p>(Lobby closes at 9:00)</p>
-					<br>
-					<p>Friday & Saturday: 7:30 AM - 11:00 PM</p>
-					<p>(Lobby closes at 10:00)</p>
-        </div>
       </div>
     </div>
 
@@ -94,13 +91,13 @@
       <div class="footer-item">All images © The Soda Barn</div>
       <div class="footer-item">
         <a href="https://github.com/baileehodge/thesodabarn" target="_blank">
-          <img src="/media/icons/github.png" width="25px" title="GitHub Repository"/>
+          <img src="/media/icons/github-white.png" width="25px" title="GitHub Repository"/>
         </a>
         <a href="https://www.facebook.com/mysodabarn" target="_blank">
-          <img src="/media/icons/facebook.png" width="25px" title="Facebook Page"/>
+          <img src="/media/icons/facebook-white.png" width="25px" title="Facebook Page"/>
         </a>
         <a href="https://www.instagram.com/the.soda.barn/" target="_blank">
-          <img src="/media/icons/instagram.png" width="25px" title="Instagram Page"/>
+          <img src="/media/icons/instagram-white.png" width="25px" title="Instagram Page"/>
         </a>
       </div>
 		</div>
