--- a/menu/index.html
+++ b/menu/index.html
@@ -7,33 +7,40 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 			integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="/default.css"/>
-		<link rel="icon" href="/media/soda-barn-teal.png"/>
+    <link rel="stylesheet" href="custom.css"/>
+		<link rel="icon" href="/media/soda-barn-logo-teal.png"/>
 		<title>Menu | The Soda Barn - Soda Pop and Cookies</title>
 	</head>
 	<body>
 
-    <div class="soda-barn-header">
+    <!-- <div class="soda-barn-header">
       <img src="/media/soda-barn-logo-white.png" height="150px" title="The Soda Barn" alt="The Soda Barn Logo"/>
       <div class="header-divider"></div>
-    </div>
+    </div> -->
 
-
-		<nav class="navbar navbar-expand-sm navbar-dark">
-			<!--<a class="navbar-brand" href="/"><img src="/media/soda-barn-icon.png" width="75em"></a>-->
+    <nav class="navbar navbar-expand-sm navbar-dark">
+			<!-- <a class="navbar-brand" href="/"><img src="/media/soda-barn-logo-white.png" width="75em"></a> -->
 			<div class="navbar-centerer">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- gave navbar-toggler the nav-item class so it gets sized the same as the nav-items -->
+        <button class="navbar-toggler nav-item" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="/menu">Menu<span class="sr-only">(current)</span></a>
+            <li class="nav-item active">
+                <a class="nav-link" href="/menu">Menu</a>
+            </li>
+            <li class="middle-logo">
+              <a href="/"><img src="/media/soda-barn-logo-white.png" title="The Soda Barn" alt="The Soda Barn Logo"></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/locations">Locations</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -43,8 +50,7 @@
     <div class="page-centerer">
       <div class="page-content">
 				<h1 class = "heading">MENU</h1>
-
-				
+        <br>
         <img src="/media/menus/menu1.jpg" width="100%"/>
 				<hr class = "menu-hr">
         <img src="/media/menus/menu2.jpg" width="100%"/>
@@ -62,13 +68,13 @@
       <div class="footer-item">All images © The Soda Barn</div>
       <div class="footer-item">
         <a href="https://github.com/baileehodge/thesodabarn" target="_blank">
-          <img src="/media/icons/github.png" width="25px" title="GitHub Repository"/>
+          <img src="/media/icons/github-white.png" width="25px" title="GitHub Repository"/>
         </a>
         <a href="https://www.facebook.com/mysodabarn" target="_blank">
-          <img src="/media/icons/facebook.png" width="25px" title="Facebook Page"/>
+          <img src="/media/icons/facebook-white.png" width="25px" title="Facebook Page"/>
         </a>
         <a href="https://www.instagram.com/the.soda.barn/" target="_blank">
-          <img src="/media/icons/instagram.png" width="25px" title="Instagram Page"/>
+          <img src="/media/icons/instagram-white.png" width="25px" title="Instagram Page"/>
         </a>
       </div>
 		</div>
