Finished requirements for Creative Project #1

--- a/locations/index.html
+++ b/locations/index.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="/locations">Locations</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/contact">Contact</a>
+                <a class="nav-link" href="/bakery">Bakery</a>
             </li>
           </ul>
         </div>
@@ -49,6 +49,8 @@
 		
     <div class="page-centerer">
       <div class="page-content">
+
+				<h1>LOCATIONS</h1>
 
         <h2 class="location-name">Chubbuck</h2>
 				<div class="location">
