--- a/bakery/index.html
+++ b/bakery/index.html
@@ -7,8 +7,9 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 			integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="/default.css"/>
+		<link rel="stylesheet" href="custom.css"/>
 		<link rel="icon" href="/media/soda-barn-logo-teal.png"/>
-		<title>The Soda Barn - Soda Pop and Cookies</title>
+		<title>Contact | The Soda Barn - Soda Pop and Cookies</title>
 	</head>
 	<body>
 
@@ -26,7 +27,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -38,7 +39,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="/locations">Locations</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="/bakery">Bakery</a>
             </li>
           </ul>
@@ -49,34 +50,25 @@
 
     <div class="page-centerer">
       <div class="page-content">
-        <h1>Welcome to the Soda Barn!</h1>
-        <br>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="/media/slideshow/drinks.jpg" alt="Drinks">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/media/slideshow/cookie-dough.jpg" alt="Cookie dough">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/media/slideshow/cookies.jpg" alt="Cookies">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
+				<h1>BAKERY ORDERS</h1>
+
+				<p>If you'd like to order more than 2 dozen cookies, we request that you place your order at least 2 weeks in advance. Cookies are $1.99 each, with a 10% discount on orders over a dozen cookies.</p>
+				<br>
+
+				<h2>To place an order...</h2>
+				<p>Email <em>fake@sodabarn.com</em> with the following information:</p>
+				<ul class="order-list">
+					<li>Name:</li>
+					<li>Phone number:</li>
+					<li>Date & time for pickup:</li>
+					<li># of chocolate Chip:</li>
+					<li># of Sugar:</li>
+					<li># of Coconut Lime:</li>
+					<li># of Oatmeal Cream Pie:</li>
+					<li># of Cookies & Cream:</li>
+					<li># of Monster:</li>
+				</ul>
+
       </div>
     </div>
 
