--- a/menu/index.html
+++ b/menu/index.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="/locations">Locations</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/contact">Contact</a>
+                <a class="nav-link" href="/bakery">Bakery</a>
             </li>
           </ul>
         </div>
