--- a/locations/index.html
+++ b/locations/index.html
@@ -121,7 +121,6 @@
 
 		
 		<div class="footer">
-      <div class="footer-item github-repo" style="width: 25px"></div>
 	    <div class="footer-item">Not an official site</div>
       <div class="footer-item">
         Created by <a href="http://baileehodge.com/" target="_blank">Bailee Hodge</a> and <a href="http://jstnmcbrd.com/" target="_blank">Justin McBride</a>
@@ -140,6 +139,7 @@
       </div>
 		</div>
 
+    <!--<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>-->
     <script src="location.js"></script>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
